...
        "description": "K Annex, Sir George Williams Campus"
    },
    {
        "id": 36,
        "latitude": 45.497050,
        "longitude": -73.578009,
        "title": "LB Building",
        "description": "J.W. McConnell Building, Sir George Williams Campus"
    },
    {
        "id": 37,
        "latitude": 45.496782,
        "longitude": -73.577358,
        "title": "LC Building",
        "description": "LC Building, Sir George Williams Campus"
    },
    {
        "id": 38,
        "latitude": 45.496697,
        "longitude": -73.577312,
...
