...
          style={styles.button}
          onPress={() => {
            onDirectionPress(placeId);
          }}
        >
          <Icon name="directions" size={24} color="#FFFFFF" />
          <Text style={styles.buttonText}>Directions</Text>
        </TouchableOpacity>

        <TouchableOpacity
          style={styles.button}
          onPress={() => setExpanded(!expanded)}
        >
...
