...
          <Image
            style={styles.image}
            source={getFloorplanImage()}
            contentFit="contain" // entire image is contained
            transition={1000}
            resizeMode="cover" // Ensures the image covers the container
            testID="roomMap"
          ></Image>
          {/* Amenities overlay */}
          {showAmenities && (
            <View style={styles.amenitiesContainer}>
              {accessibleAmenities.map((item) => (
                <MaterialIcons
...
