appId: host.exp.exponent
---
- tapOn: "Show navigation menu"  
- tapOn: "Campus Map"
- tapOn: "Loyola"
- tapOn: "SGW"