appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Points of interests"
- tapOn: "Loyola"
- tapOn: "SGW"
- tapOn:
    point: "10%,94%"
- tapOn: "Coffee"
- tapOn: "Apply"
- tapOn: "Eggspectation - Maisonneuve"
- assertVisible: "Name : Eggspectation - Maisonneuve"