appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Points of interests"
- tapOn: "Secret publik"
- tapOn: "Directions"