appId: host.exp.exponent
---
- tapOn: "Show navigation menu" 
- tapOn: "Indoor Directions"
- tapOn: "Find a room"
- tapOn: "Enter room number (e.g., H-920)"
- inputText: "H-407"
- tapOn: "Find the room" 
- tapOn: "Hide Amenities"
- tapOn: "Show Amenities"