appId: host.exp.exponent
---
- tapOn: "Show navigation menu" 
- tapOn: "Indoor Directions"
- tapOn: "Find a room"
- tapOn: "Enter room number (e.g., H-920)"
- inputText: "H-521"
- tapOn: "Find the room"
- assertVisible:
    id: "roomMap"


